[gd_scene load_steps=6 format=3 uid="uid://bg1cu4jc5d02i"]

[ext_resource type="Script" uid="uid://dlhyopex5ik12" path="res://game_main.gd" id="1_lbacn"]
[ext_resource type="PackedScene" uid="uid://ctwne5ov0kyhs" path="res://Enviornment/Forest/Pine_Tree.tscn" id="1_tjf8n"]
[ext_resource type="PackedScene" uid="uid://dvhbxpmtkd6kj" path="res://Characters/Playable/HappyBoo/HappyBooPlayer.tscn" id="2_tjf8n"]
[ext_resource type="PackedScene" uid="uid://ce0va11wwm5k5" path="res://Characters/Mobs/GreenSlime/GreenSlime.tscn" id="3_3ticj"]
[ext_resource type="PackedScene" uid="uid://c6ptu0imhwod8" path="res://UI/GameOver/game_over.tscn" id="5_hyuye"]

[node name="GameMain" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_lbacn")
game_over_scene = ExtResource("5_hyuye")

[node name="PlayerHappyBoo" parent="." instance=ExtResource("2_tjf8n")]
position = Vector2(419, 254)
gunSlots = [null, null, null]

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="PineTree" parent="." instance=ExtResource("1_tjf8n")]
position = Vector2(420, -60)

[node name="PineTree2" parent="." instance=ExtResource("1_tjf8n")]
position = Vector2(144, 252)

[node name="PineTree3" parent="." instance=ExtResource("1_tjf8n")]
position = Vector2(814, 201)

[node name="GreenSlime" parent="." instance=ExtResource("3_3ticj")]
position = Vector2(648, 11)

[node name="GreenSlime2" parent="." instance=ExtResource("3_3ticj")]
position = Vector2(795, 477)

[node name="GreenSlime3" parent="." instance=ExtResource("3_3ticj")]
position = Vector2(-184, 16)

[node name="GameOver" parent="." instance=ExtResource("5_hyuye")]
visible = false

[connection signal="child_exiting_tree" from="." to="." method="On_Player_Deleted"]
